alignent fixed

--- a/src/app/hr-dashboard/hr-shortlisting/first-level-shortlist/shortlisted-candidate-list/shortlisted-candidate-list.component.scss
+++ b/src/app/hr-dashboard/hr-shortlisting/first-level-shortlist/shortlisted-candidate-list/shortlisted-candidate-list.component.scss
@@ -98,7 +98,7 @@
           position: relative;
           img {
             cursor: pointer;
-            width: 100%;
+            width: 30px;
             height: 30px;
           }
           input {
